--- a/entries/2024_10_07.md
+++ b/entries/2024_10_07.md
@@ -4,6 +4,8 @@
 
 Have you ever found yourself struggling to decide what data goes where, whether some logic might be better suited to live in a script versus a module, which scripts should be responsible for managing which modules, or some other organizational problem that inevitably results in major refactors, stunted progress, and drained motivation? It's a common problem, not only in Defold, but in seemingly every language or framework. In this entry, I'll try to explain how I solved this recurring problem, such that it's no longer a recurring problem.
 
+---
+
 The sole purpose of a script is to provide channels of communication between the engine and the user through lifecycle functions. There are seven of these in total:
 
 ```lua
@@ -26,7 +28,7 @@ The file '/scripts/my_script.lua' could not be found.
 
 I often see Defold users trying to write a lot of functionality and store a lot of local variables in whichever script file seems like the closest fit for that data. As I've tried to explain, that's not the purpose of a script. Given enough complexity and project growth, this design decision will cause an organizational mess and result in all of those major refactors and headaches I mentioned at the beginning of this entry.
 
-Let's think about the problem of where to put things, but outside the context of Defold. In an ordinary program, how would this be handled. I'd expect there to be some number of modules that contain related functions and variables. These modules would include each other as dependencies wherever necessary. Finally, we would launch a driver program or REPL as the main program entry point. This driver would simply interface with the various modules, and perhaps manage a very small subset of data that's only relevant to the driver.
+Let's think about the problem of where to put things, but outside the context of Defold. In an ordinary program, how would this be handled? I'd expect there to be some number of modules that contain related functions and variables. These modules would include each other as dependencies wherever necessary. Finally, we would launch a driver program or REPL as the main entry point. This driver would simply interface with the various modules, and perhaps manage a very small subset of data that's only relevant to the driver.
 
 Now let's bring Defold back into the conversation. What changes? The driver changes. In fact, we can delete our old driver program entirely, because the engine *is* the driver. Just as the driver would simply interface with the various modules, so does Defold. It does this through those seven lifecycle functions in our scripts.
 
@@ -40,7 +42,7 @@ Properties use the game object API for a reason: they're meant to be thought of 
 
 Messages are also limited for some of the same reasons. Not only that, but they're unsuspectingly dangerous to pass around without fully understanding your game loop. This might come across as overly dramatic, but let me explain.
 
-When a message is posted with `msg.post()`, it doesn't arrive in sequence with the surrounding code. Instead, messages are processed at the end of each frame, after all scripts have completed their `update()` functions. This implies that although you may intend for another script to take some action or change its state "basically immediately", there's potentially still a whole lot of code to execute before that happens. When the message is finally processed, the state of the game may have changed such that whatever action that message was meant to take isn't valid anymore. A more concrete example is sending a message to another script, but the game object that script is attached to is deleted during the `update()` of some other script, causing one of the most difficult-to-debug errors Defold has to offer:
+When a message is posted with `msg.post()`, it doesn't arrive in sequence with the surrounding code. Instead, messages are processed at the end of each frame, after all scripts have completed their `update()` functions. This implies that although you may intend for another script to take some action or change its state "basically immediately", there's potentially still a whole lot of code to execute before that happens. When the message is finally processed, the state of the game may have changed such that whatever action that message was meant to take isn't valid anymore. A more concrete example is sending a message to another script, but the game object that script is attached to was deleted during the `update()` of some other script, causing one of the most difficult-to-debug errors Defold has to offer:
 
 ```
 ERROR:GAMEOBJECT: Instance '/my_object#script' could not be found when dispatching message 'my_message' sent from collection:/my_other_object#script
@@ -52,7 +54,7 @@ It should be obvious why messages aren't a fantasic way of sharing data. As we j
 
 Finally, we get to talk about modules! Recall our discussion about writing a Lua application without Defold. We have a driver that's focused on one goal, that interfaces with various modules, which communicate between each other. The driver also bears the responsibility of initializing and finalizing any data that needs initializing or finalizing within the modules, since module code can't run without a driver. When Defold is brought back into the conversation, we consider each script to be a driver, while modules are still just modules.
 
-As long as we conform to the paradigm of each module declaring itself as a table, inserting its interface and variables into that table, then returning that table at the end of the file, we're able to import any number of modules into any number of scripts without concern. There's no delay, no frame-sensitive message delay, no restrictions on what data types are supported, etc. The only obvious issue is the aforementioned separation between the render script, GUI scripts, and GO scripts. Modules can contain code for all three of these, but we have to be careful to not mix them in a single function.
+As long as we conform to the paradigm of each module declaring itself as a table, inserting its interface and variables into that table, then returning that table at the end of the file, we're able to import any number of modules into any number of scripts without concern. There's no delay, no potential for frame-sensitive message errors, no restrictions on which data types are supported, etc. The only obvious issue is the aforementioned separation between the render script, GUI scripts, and GO scripts. Modules can contain code for all three of these, but we have to be careful to not mix them in a single function.
 
 ```lua
 -- my_module.lua
@@ -128,9 +130,9 @@ function m_bus.unsubscribe(type, callback)
 	g_callbacks[type][callback] = nil
 end
 
--- When a module wants to trigger a certain event, it passes the corresponding
--- message type to this function, which then triggers all of the callbacks that
--- were saved by `m_bus.subscribe()`.
+-- When a module wants to trigger a certain event,
+-- it passes the corresponding message type to this function,
+-- which then triggers all of the callbacks that were saved by `m_bus.subscribe()`.
 -- This is one way in which a module can call private functions that live in another module.
 function m_bus.trigger(type, data)
 	for callback, _ in pairs(g_callbacks[type]) do
@@ -141,9 +143,14 @@ end
 return m_bus
 ```
 
-This bus module is nearly identical to what I use in my own projects. Feel free to read through the code and comments. It's a very simple yet powerful approach to keeping functions private, but still allowing them to be triggered as callbacks by other modules. As a point of clarification, I use the `m_` prefix to refer to a module table, and the `_g` prefix to refer to variables or functions that are not nested within another structure. This helps me avoid name collisions. For example, imagine importing modules called camera and timer. They would shadow Defold's global camera and timer APIs, forcing us to use undesirable alternative identifiers for those modules. Same idea goes for non-nested data.
+This bus module is nearly identical to what I use in my own projects. Feel free to read through the code and comments. It's a very simple yet powerful approach to keeping functions private, but still allowing them to be triggered as callbacks by other modules. As a point of clarification, I use the `m_` prefix to refer to a module table, and the `g_` prefix to refer to variables or functions that are not nested within another structure. This helps me avoid name collisions. For example, imagine importing modules called camera and timer. They would shadow Defold's global camera and timer APIs, forcing us to use undesirable alternative identifiers for those modules.
 
-That's everything I wanted to share about my mental model and approach to answering the question of when to use scripts versus modules. Scripts are drivers. Their sole purpose is to provide channels of communication between the engine and the user through lifecycle functions. Keep them lightweight. Use them to initialize and finalize modules, and to interface with modules at a high level. Modules should be separated by relevance. They can communicate between each other freely, including triggering functionality and sharing data. Think twice before declaring properties and passing messages. Properties are kind of like a game object's genetic traits. Messages are useful for triggering functionality that isn't more easily covered by modules, such as communicating between the render script, GUI scripts, and GO scripts. Rmemeber to be wary of frame-sensitive message errors. If you run into the occasional seemingly-random error, it probably stems from a message being processed after an unexpected state change during the previous update cycle.
+That's everything I wanted to share about my mental model and approach to answering the question of when to use scripts versus modules. In summary:
+
+* Scripts are drivers. Their sole purpose is to provide channels of communication between the engine and the user through lifecycle functions. Keep them lightweight. Use them to initialize and finalize modules, and to interface with modules at a high level. Prefer to create as few of these as possible.
+* Modules should be separated by relevance. They can communicate between each other freely, including triggering functionality and sharing data.
+* Think twice before declaring properties and passing messages. Properties are kind of like a game object's genetic traits. Messages are useful for triggering functionality that isn't more easily covered by modules, such as communicating between the render script, GUI scripts, and GO scripts.
+* Be wary of frame-sensitive message errors. If you run into the occasional seemingly-random error, it probably stems from a message being processed after an unexpected state change during the previous update cycle.
 
 Thanks for reading.
 
