--- a/entries/2024_10_07.md
+++ b/entries/2024_10_07.md
@@ -99,10 +99,10 @@ local g_type_update_sun = hash("update_sun")
 -- which are filled by other modules through the `m_bus.subscribe()` function.
 local g_callbacks =
 {
-	[g_type_volatile_input] = {},
-	[g_type_weather_rain] = {},
-	[g_type_weather_clear] = {},
-	[g_type_update_sun] = {}
+    [g_type_volatile_input] = {},
+    [g_type_weather_rain] = {},
+    [g_type_weather_clear] = {},
+    [g_type_update_sun] = {}
 }
 
 --------------------------------------------------------------------------------
@@ -111,10 +111,10 @@ local g_callbacks =
 
 -- Other modules pass these public message types to the `m_bus.subscribe()`,
 -- `m_bus.unsubscribe()`, and `m_bus.trigger()` functions.
-m_bus.g_type_volatile_input = g_type_volatile_input
-m_bus.g_type_weather_rain = g_type_weather_rain
-m_bus.g_type_weather_clear = g_type_weather_clear
-m_bus.g_type_update_sun = g_type_update_sun
+m_bus.type_volatile_input = g_type_volatile_input
+m_bus.type_weather_rain = g_type_weather_rain
+m_bus.type_weather_clear = g_type_weather_clear
+m_bus.type_update_sun = g_type_update_sun
 
 --------------------------------------------------------------------------------
 -- Module Functions
@@ -122,12 +122,12 @@ m_bus.g_type_update_sun = g_type_update_sun
 
 -- Other modules can subscribe to whichever message types they require.
 function m_bus.subscribe(type, callback)
-	g_callbacks[type][callback] = true
+    g_callbacks[type][callback] = true
 end
 
 -- Allow other modules to unsubscribe too.
 function m_bus.unsubscribe(type, callback)
-	g_callbacks[type][callback] = nil
+    g_callbacks[type][callback] = nil
 end
 
 -- When a module wants to trigger a certain event,
@@ -135,9 +135,9 @@ end
 -- which then triggers all of the callbacks that were saved by `m_bus.subscribe()`.
 -- This is one way in which a module can call private functions that live in another module.
 function m_bus.trigger(type, data)
-	for callback, _ in pairs(g_callbacks[type]) do
-		callback(data)
-	end
+    for callback, _ in pairs(g_callbacks[type]) do
+        callback(data)
+    end
 end
 
 return m_bus
