Small text updates

--- a/entries/2024_10_07.md
+++ b/entries/2024_10_07.md
@@ -2,9 +2,7 @@
 
 ## Scripts or Modules? It’s an Architecture Decision, Moreso Than a Data Decision
 
-Have you ever found yourself struggling to decide what data goes where, whether some logic might be better suited to live in a script versus a module, which scripts should be responsible for managing which modules, or some other organizational problem that inevitably results in major refactors, stunted progress, and drained motivation? It's a common problem, not only in Defold, but in seemingly every language or framework. In this entry, I'll try to explain how I solved this recurring problem, such that it's no longer a recurring problem.
-
----
+A common problem for Defold users is struggling to decide what data goes where, whether some logic might be better suited to live in a script versus a module, which scripts should be responsible for managing which modules, or some other organizational problem that inevitably results in major refactors, stunted progress, and drained motivation. In this entry, I'll try to explain how I solved this recurring problem, such that it's no longer a recurring problem.
 
 The sole purpose of a script is to provide channels of communication between the engine and the user through lifecycle functions. There are seven of these in total:
 
